# fluora

./: .gitignore  README.md  main.py  modal_app.py  pyproject.toml
fluora/: extract.py  io.py  segment.py  track.py
notebooks/: fluora_colab.ipynb
