[project]
name = "fluora"
version = "0.1.0"
description = "Single-cell fluorescence trace analysis from timelapse microscopy"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "tifffile",
    "numpy",
    "pandas",
    "laptrack",
    "scikit-image",
    "cellSAM @ git+https://github.com/vanvalenlab/cellSAM.git",
]
